addr from r-universe

--- a/manifest.json
+++ b/manifest.json
@@ -62,44 +62,38 @@
       }
     },
     "addr": {
-      "Source": "github",
+      "Source": "https://geomarker-io.r-universe.dev",
       "Repository": null,
       "description": {
         "Package": "addr",
-        "Title": "Clean, Parse, Harmonize, and Hash Messy Real-World Addresses",
-        "Version": "0.1.0",
-        "Authors@R": "\n    person(\"Cole\", \"Brokamp\", , \"cole@colebrokamp.com\", role = c(\"aut\", \"cre\"),\n           comment = c(ORCID = \"0000-0002-0289-3151\"))",
-        "Description": "Addresses that were not validated at the time of collection are often heterogenously formatted, making them difficult to compare or link to other sets of addresses. The addr package is designed to clean character strings of addresses, use the `usaddress` library to tag address components, and paste together select components to create a normalized address. Normalized addresses can be hashed to create hashdresses that can be used to merge with other sets of addresses.",
-        "URL": "https://github.com/cole-brokamp/addr",
+        "Title": "Clean, Parse, Harmonize, Match, and Geocode Messy Real-World\nAddresses",
+        "Version": "0.6.0",
+        "Authors@R": "\n    c(person(\"Cole\", \"Brokamp\", email = \"cole@colebrokamp.com\", role = c(\"aut\", \"cre\")),\n      person(\"Erika\", \"Manning\", role = c(\"aut\")))",
+        "Description": "Addresses that were not validated at the time of\n        collection are often heterogenously formatted, making them\n        difficult to compare or link to other sets of addresses. The\n        addr package is designed to clean character strings of\n        addresses, use the `usaddress` library to tag address\n        components, and paste together select components to create a\n        normalized address. Normalized addresses can be hashed to\n        create hashdresses that can be used to merge with other sets of\n        addresses.",
+        "URL": "https://github.com/cole-brokamp/addr,\nhttps://cole-brokamp.github.io/addr/",
         "BugReports": "https://github.com/cole-brokamp/addr/issues",
         "License": "MIT + file LICENSE",
         "Encoding": "UTF-8",
         "Roxygen": "list(markdown = TRUE)",
-        "RoxygenNote": "7.3.1",
-        "Suggests": "testthat (>= 3.0.0), sf, s2",
-        "Imports": "purrr, stringr, glue, rlang, vctrs, methods, stringdist,\nzeallot",
+        "RoxygenNote": "7.3.2",
+        "Suggests": "testthat (>= 3.0.0), sf, s2, tidyr",
+        "Imports": "purrr, cli, stringr, dplyr, glue, fs, tibble, rlang, vctrs,\nmethods, stringdist, zeallot",
         "SystemRequirements": "Cargo (Rust's package manager), rustc",
         "Config/testthat/edition": "3",
-        "Config/rextendr/version": "0.3.1.9000",
-        "Depends": "R (>= 2.10)",
-        "LazyData": "true",
-        "LazyDataCompression": "xz",
-        "NeedsCompilation": "yes",
-        "Packaged": "2024-07-11 12:55:01 UTC; vanug6",
-        "Author": "Cole Brokamp [aut, cre] (<https://orcid.org/0000-0002-0289-3151>)",
-        "Maintainer": "Cole Brokamp <cole@colebrokamp.com>",
-        "Built": "R 4.2.2; x86_64-apple-darwin17.0; 2024-07-11 12:59:07 UTC; unix",
-        "RemoteType": "github",
-        "RemoteHost": "api.github.com",
-        "RemoteRepo": "addr",
-        "RemoteUsername": "cole-brokamp",
-        "RemotePkgRef": "cole-brokamp/addr",
+        "Config/testthat/parallel": "true",
+        "Config/testthat/start-first": "addr_match*, s2_join_tiger_bg",
+        "Depends": "R (>= 3.5.0)",
+        "Config/rextendr/version": "0.3.1",
+        "Config/pak/sysreqs": "make libicu-dev",
+        "Repository": "https://geomarker-io.r-universe.dev",
+        "RemoteUrl": "https://github.com/geomarker-io/addr",
         "RemoteRef": "HEAD",
-        "RemoteSha": "a608771ceae6a9ddc3613bcffe7327a891e5ce28",
-        "GithubRepo": "addr",
-        "GithubUsername": "cole-brokamp",
-        "GithubRef": "HEAD",
-        "GithubSHA1": "a608771ceae6a9ddc3613bcffe7327a891e5ce28"
+        "RemoteSha": "2654181c4c47fcdac3c971ed61ce711f8e1bf35a",
+        "NeedsCompilation": "yes",
+        "Packaged": "2024-12-20 19:24:59 UTC; root",
+        "Author": "Cole Brokamp [aut, cre],\n  Erika Manning [aut]",
+        "Maintainer": "Cole Brokamp <cole@colebrokamp.com>",
+        "Built": "R 4.2.2; x86_64-apple-darwin17.0; 2025-01-10 14:31:14 UTC; unix"
       }
     },
     "askpass": {
